fix toolbar on small media

--- a/src/styles/_base/_layout.sass
+++ b/src/styles/_base/_layout.sass
@@ -36,11 +36,13 @@ body
 @media (max-width: 320px)
   .App 
     max-width: 300px
-    font-size: 14px
+    font-size: 13px
     
     #welcome-page
       img 
         width: 180px
+    .button-toggler
+        padding: 0 5px
 
 .toolbar
   display: flex
